--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
     <div id="container">
     </div>
+    <script src="draw.js"></script>
+
 </body>
 </html>
