--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
+    <button>Change square size</button>
     <div id="container">
     </div>
     <script src="draw.js"></script>
