Decorate website and make generateCanvas function

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <script src="draw.js" defer></script>
     <link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
-    <button>Change square size</button>
-    <div id="container">
-    </div>
-    <script src="draw.js"></script>
-
+    <h1>Etch-a-Sketch</h1>
+    <button id="changeSize">Change canvas size</button>
+    <div id="container"></div>
 </body>
 </html>
